--- a/back/public/index.html
+++ b/back/public/index.html
@@ -12,14 +12,14 @@
     <img src="https://images.ctfassets.net/denf86kkcx7r/4IPlg4Qazd4sFRuCUHIJ1T/f6c71da7eec727babcd554d843a528b8/gatocomuneuropeo-97"
         alt="Gatito">
 
-    <h3>Crear Perfil</h3>
+    <!-- <h3>Crear Perfil</h3>
     <form action="/API/v1/upload" method="post" enctype="multipart/form-data"></form>
 
     Avatar: <input type="file" name="avatar"><br>
     Nombre: <input type="text" name="nombre"><br>
     Clave: <input type="text" name="clave"><br>
     <input type="submit" name="Enviar">
-
+ -->
 
 </body>
 
